--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.15",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
